# DGP_Jie

./: .gitignore  CMakeLists.txt  README.md
doc/: Angle Based Flattening Plus Plus.md  Barycentric Mapping, Tutte's embedding.md  Garment Transfer.md
examples/abfpp/: CMakeLists.txt  main.cpp
examples/barycentric_mapping/: CMakeLists.txt  main.cpp
examples/correspond/: CMakeLists.txt  main.cpp
examples/data/: cloth2body.map
examples/deformation_transfer/: CMakeLists.txt  main.cpp
examples/garment_transfer/: CMakeLists.txt  main.cpp
examples/lscm/: CMakeLists.txt  main.cpp
examples/mesh_denoising/: CMakeLists.txt  main.cpp
examples/mesh_optimization_Renka16/: CMakeLists.txt  main.cpp
examples/mesh_optimization_xu06/: CMakeLists.txt  main.cpp
examples/simplification/: CMakeLists.txt  main.cpp
optimizer/: CMakeLists.txt
optimizer/include/: fast_ATA.h  function.h  linear_optimizer.h  linear_solver.h  nonlinear_solver.h  test_function.h
optimizer/src/: fast_ATA.cpp  linear_optimizer.cpp  linear_solver.cpp  nonlinear_solver.cpp  test_function.cpp
pmp_jie/: CMakeLists.txt
pmp_jie/include/: QEM_structures.h  abf_pp.h  angle_based_optimization_Xu.h  angle_reconstruct.h  barycentric_mapping.h  base_mesh.h  correspond.h  deformation_transfer.h  garment_transfer.h  halfedge.h  least_squares_comformal_maps.h  local_mesh_optimization.h  mesh_QEM_simplification.h  mesh_denoising.h  mesh_io.h  mesh_optimization_Renka16.h  polygon_mesh.h  structures.h  timer.h  tools.h
pmp_jie/src/: QEM_structures.cpp  abf_pp.cpp  angle_based_optimization_Xu.cpp  angle_reconstruct.cpp  barycentric_mapping.cpp  correspond.cpp  deformation_transfer.cpp  garment_transfer.cpp  halfedge.cpp  least_squares_comformal_maps.cpp  local_mesh_optimization.cpp  mesh_QEM_simplification.cpp  mesh_denoising.cpp  mesh_io.cpp  mesh_optimization_Renka16.cpp  polygon_mesh.cpp  tools.cpp
test/: CMakeLists.txt  LM_tset.cpp  common_test.cpp
test/lib/docs/: faq.md
test/lib/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/lib/googlemock/src/: gmock-internal-utils.cc
test/lib/googletest/include/gtest/: gtest-death-test.h
